src/terraform/modules/traefik/dashboard-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: ${namespace}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.${namespace}.${domain-name}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
          tls:
          - secretName: traefik-cert
